--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,17 @@ html {
   font-size: 100%;
 }
 body {
-  font-family: 'IM FELL Great Primer','Philosopher', serif;
+  /* font-family: 'IM FELL Great Primer','Philosopher', serif; */
+  font-family: 'Noto Sans JP', sans-serif;
   line-height: 1.7;
-  color: #000;
+  color: #333;
+  counter-reset: number 0; 
+
+}
+img {
+  width: 100%;
+  height: 100%;
+  vertical-align: bottom;
 }
 @media (min-width: 1100px) {
   p {
@@ -23,6 +31,9 @@ p + h3,
 a + a {
   margin-top: 16px;
 }
+h3 {
+  font-weight: normal;
+}
 ul {
   list-style-position: inside;
 }
@@ -35,46 +46,99 @@ ul {
  }
 
  /* HEADER */
-/* ロゴ */
- #logo {
-  width: 300px;
-  margin-top: 16px;
- }
-
- /* 電話ロゴ */
- #call-logo {
-  width: 400px;
- }
- @media (max-width: 800px) {
-  #call-logo {
-    display: none;
+/* ロゴ・愛媛県顧客満足度のグループ */
+.header-left {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  gap: 10px;
+}
+@media (max-width: 800px) {
+  .header-left {
+    width: 100%;
    }
 }
-  /* LINEロゴ */
-  #line-logo {
-    width: 500px;
+/* ロゴ */
+ #logo {
+  width:300px;
+ }
+ #logo a {
+  display: block;
+  width: 100%;
+  height: 100%;
+ }
+ @media (max-width: 800px) {
+  #logo {
+    width: 180px;
    }
-   @media (max-width: 800px) {
-    #line-logo {
-      display: none;
-     }
-  }
+}
+  /* 愛媛県顧客満足度 */
+ #header-center {
+  width:120px;
+  margin-left: 20px;
+ }
+ @media (max-width: 800px) {
+   #header-center {
+     width: 60px;
+    }
+}
 
-   /* ヘッダー幅の書式 */
- .header-wrapper {
-  max-width: 1500px;
-  margin: 0 auto;
-  padding: 0 4%;
+/* 電話ロゴ */
+#call-logo {
+width: 400px;
+}
+/* LINEロゴ */
+#line-logo {
+  width: 400px;
+  margin: 0;
+  }
+  
+/* お問い合わせ（tel・LINE) */
+.header-right {
+  display: flex;
+  align-items: center;
+  width: 50%;
+  gap: 10px;
+}
+@media (max-width: 800px) {
+  .header-right {
+    display: none;
+  }
+}
+
+/* ヘッダー幅の書式 */
+.header-wrapper {
+  padding: 5px 4%;
+  width: 100%;
  }
 
 
  /* ページヘッダー */
  .page-header {
   display: flex;
+  gap: 20px;
+  top: 0;
   justify-content: space-between;
   align-items: center;
- }
-
+  position: relative;
+  height: 160px;
+  z-index: 2000;
+  background: #fff;
+  width: 100%;
+  box-shadow: 1px 1px 6px 0px #707070;
+  transition: box-shadow .3s;
+  overflow: hidden;
+}
+@media (max-width: 800px) {
+  .page-header {
+    height: 80px;
+    position: fixed;
+   }
+   
+}
+.page-header.shadow-hide {
+  box-shadow: none;
+}
  /* 画面幅の書式 */
  .wrapper {
   max-width: 1300px;
@@ -89,56 +153,56 @@ ul {
 
 /* ハンバーガーメニュー部分 */
 .sp-menu {
-  margin-top: 16px;
-  margin-left: 8px;
+  height: 21px;
+  width: 18px;
 }
-.sp-menu #open {
-  font-size: 32px;
-  line-height: 64px;
-  padding: 0 16px;
-  background: white;
-  border: solid silver 0.5px;
-  border-radius: 5px;
+.sp-menu div {
+  width: 18px;
+  height: 2px;
+  background: #000;
+  position: relative;
+  margin-bottom: 5px;
+  transition: 0.3s;
+  z-index: 1000;
   cursor: pointer;
 }
-.sp-menu #open.hide {
-  display: none;
+.sp-menu.hide div:nth-child(1) {
+  transform: translateY(7px) rotate(135deg);
+  }
+.sp-menu.hide div:nth-child(2) {
+  transform: scale(0);
+}
+.sp-menu.hide div:nth-child(3) {
+  transform: translateY(-7px) rotate(-135deg);  
 }
 .overlay {
   position: fixed;
   top: 0;
-  bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(255, 150, 90, 0.95);
+  background: rgba(255, 255, 255, 0.95);
   text-align: center;
   padding: 32px;
   opacity: 0;
   pointer-events: none;
   transition:  opacity .6s;
-  color: white;
+  z-index: 100;
 }
 .overlay.show {
   opacity: 1;
   pointer-events: auto;
 }
-.overlay #close {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  font-size: 32px;
-  cursor: pointer;
-}
 .overlay ul {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding-top: 60px;
 }
 .overlay li {
-  margin-top: 24px;
+  margin-top: 12px;
   opacity: 0;
   transform: translateY(16px);
   transition: opacity .3s, transform .3s;
+  border-bottom: 1px solid #d4d4d4;
 }
 .overlay.show li {
   opacity: 1;
@@ -149,7 +213,7 @@ ul {
   line-height: 64px;
   font-size: 1.5rem;
   text-decoration: none;
-  color: white;
+  color: #333;
 }
 .overlay a:hover {
   opacity: 0.6;
@@ -159,11 +223,11 @@ ul {
 .pc-menu {
   display: none;
 }
-@media (min-width: 950px) {
+@media (min-width: 800px) {
   .pc-menu {
     display: block;
     font-size: 1.25rem;
-    background-color: #FF965A;
+    background-color: #fff;
   }
   .pc-menu nav {
     max-width: 1300px;
@@ -178,15 +242,21 @@ ul {
   }
   .pc-menu li {
     display: inline-block;
+    width: 16.6%;
+    text-align: center;
 
   }
   .pc-menu a {
     display: block;
     text-decoration: none;
-    color: white;
-    padding: 0 24px;
-    line-height: 64px;
+    color: #333;
+    margin: 16px 0px;
+    border-right: 1px solid #FF965A;
   }
+  .pc-menu li:last-child a {
+    border: none;
+  }
+  .pc-menu a
   .pc-menu a:hover {
     opacity: 0.6;
     text-decoration: underline;
@@ -197,61 +267,154 @@ ul {
 }
 
 /* ホーム画面用 */
-#home-img {
-  min-height: 80vh;
-  object-fit: cover;
+.top-image {
+  position: relative;
+  margin-top: 0;
 }
-@media (max-width: 450px) {
-  #home-img {
-    min-height: 50vh;
+@media (max-width: 800px) {
+  .top-image {
+    margin-top: 80px;
+   }
+}
+
+.top-image-pc::before {
+  content: "";
+  display: block;
+  padding-top: 56%;
+}
+.top-image-sp::before {
+  content: "";
+  display: block;
+  padding-top: 104%;
+}
+.home-img {
+  height: auto;
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  object-fit: contain;
+  opacity: 0;
+  transition: opacity 1.5s;
+}
+.home-img.current {
+  opacity: 1;
+}
+.top-image-sp {
+  display: none;
+}
+.top-image-pc {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+@media (max-width: 800px) {
+  .top-image-sp {
+    display: block;
   }
+  .top-image-pc {
+    display: none;
+  }
+}
+/* 画面下のお問い合わせ pc画面*/
+.contact-under-pc {
+  display: flex;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  justify-content: center;
+  gap: 20px;
+  z-index: 1000;
+}
+.contact-under-pc a,
+.contact-under-pc p{
+  display: block;
+  height: 85%;
+  margin: auto 0;
+}
+
+/* 画面下のお問い合わせ スマホ画面*/
+
+.contact-under-sp {
+  text-align: center;
+  height: 80px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  display: none;
+  z-index: 1000;
+}
+@media (max-width: 800px) {
+  .contact-under-sp {
+    display: block;
+  }
+}
+.contact-under-sp p {
+  background: #B28700;
+  color: #fff;
+}
+.contact-under-content {
+  display: flex;
+  height: 52px;
+  justify-content: center;
+  padding: 5px;
+  z-index: 2000;
 }
 
 /* メインの内容 */
 /* セクション　背景が紫色 */
- .bg-color {
-  background-color: #FFD1B8;
-  padding: 32px;
-}
+
+ .bg-color { 
+  /* background-color: #FFD1B8; */
+  /* padding: 32px; */
+  background: url(../images/bg.png);
+  position: relative;
+  padding: 8px 0 32px;
+  margin-top: 128px;
+  
+ }
+ .bg-color::before {
+   content: "";
+   width: 100%;
+   height: 64px;
+   display: block;
+   position: absolute;
+   background: url(../images/bg.png);
+   clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+   top: -64px;
+  }
+  @media (max-width:450px) {
+   .bg-color {
+     margin-top: 64px;
+ 
+   }
+   .bg-color::before {
+     height: 32px;
+     top: -32px;
+   }
+  }
 
 /* 見出しの設定 */
 .top-h2 {
-  padding-top: 16px;
-  font-size: 32px;
+  padding: 16px 0;
+  font-size: 48px;
+  border-top: 2px solid #FF965A;
+  border-bottom: 2px solid #FF965A;
+  margin: 32px auto;
+  letter-spacing: 2px;
+  width: 800px;
+  text-align: center;
 }
-@media (max-width: 450px) {
+@media (max-width: 900px) {
   .top-h2 {
     font-size: 24px;
+    width: 100%;
   }
 }
-.h2-title {
-  font-size: 1.375rem;
-  padding: 8px 8px;
-  border-bottom: 2px #008037 solid;
-  border-top: 2px #008037 solid;
-  margin-top: 32px;
-  margin-bottom: 16px;
-  background: rgba(182,215,168,0.3);
-  color: #008037;
-}
-.top-h3 {
-  margin-bottom: 16px;
-}
-.h3-title {
-  font-size: 1.375rem;
-  padding: 8px 8px;
-  margin-bottom: 16px;
-  background: #008037;
-  color: white;
-  border-radius: 10px;
-}
-
-/* 下線の設定 */
-.underline-color {
-  display: inline-block;
-  border-bottom: #FF965A solid 4px;
-}
-
 /* 中央に文章 */
 .center-caption {
   width: 800px;
@@ -264,94 +427,285 @@ ul {
   }
 }
 
+ 
+ /* 悩み */
+ .worries ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: space-around;
+  background: #ff965a;
+  padding: 24px;
+  position: relative;
+  border-radius: 10px;
+}
+.worries ul::after {
+  content:  "";
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  bottom: -15px;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  background: #ff965a;
+}
+.worries ul li {
+  border: 7px solid #fd8642;
+  border-radius: 50%;
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+.worries ul li::before {
+  content: '?';
+  font-size:200px;
+  color: #fd8642;
+  position: absolute;
+  top: 46%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.worries ul li span {
+  color: #fff;
+  font-size:16px;
+  line-height: 2;
+  width: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+ }
+ @media (max-width:520px) {
+  .worries ul {
+    flex-direction: column;
+    padding: 16px 0px 16px 40px;
+    width: 335px;
+    margin: 0 auto;
+  }
+  .worries ul li {
+    width: auto;
+    height: auto;
+    border: none;
+    text-align: start;
+    padding-left: 40px;
+  }
+  .worries ul li::before {
+    font-size: 32px;
+    width: auto;
+    height: auto;
+    left: 0;
+    color: #fff;
+  }
+  .worries ul li::after {
+    content: '';
+    position: absolute;
+    top: 11px;
+    left: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 3px solid #fff;
+  }
+  .worries ul li span {
+    position: static;
+    line-height: 4;
+  }
+  .worries li span br {
+    display: none;
+  }
+ }
+ .worries p {
+  font-size: 24px;
+  position: relative;
+  display: inline-block;
+ }
+ .worries p::before,
+ .worries p::after {
+   content: '';
+   background: #ff965a;
+   width: 3px;
+   height: 30px;
+   display: block;
+   position: absolute;
+ }
+
+ .worries p::before {
+  transform:rotate(135deg);
+  left: -18px;
+  top: 6px;
+ }
+ .worries p::after {
+  transform:rotate(-135deg);
+  right: -18px;
+  top: 6px;
+ }
+ /* 選ばれる理由 */
+ .merit .center-caption {
+  margin-bottom: 0;
+ }
+ .merit li h3{
+   font-weight: bold;
+   font-size: 24px;
+   color: #C93A0E;
+   display: block;
+   position: relative;
+   display: flex;
+   gap: 20px;
+   margin: 0 auto;
+   text-align: center;
+   margin-left: 20px;
+ }
+ .merit li h3 div br {
+   display: none;
+ }
+ @media (max-width:450px) {
+   .merit li h3 div br {
+     display: block;
+    }
+  }
+  .merit li .merit-number::after {
+    content: "";
+    background: url(../images/reason-number.png);
+    background-size: cover;
+    width: 48px;
+    height: 40px;
+    position: absolute;
+    top: -3px;
+    left: -17px;
+  }
+  .merit li {
+    list-style: none;
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  .merit li:last-child  {
+   margin-bottom: 0;
+  }
+ /* 施工例 */
  /* 横並び */
  .item-flex {
-  display: flex;
-  padding: 16px 0;
-  align-items: center;
-  justify-content: space-around;
-  max-width: 1200PX;
-  align-items: initial;
- }
- /* 施工例 */
- .item-pic {
-  max-width: 300px;
-  margin: 0 auto;
-}
-.item-cap {
-  text-align: center;
-  font-weight: bold;
-}
- @media (max-width: 800px) {
-  .item {
-    margin: 16px 0;
-  }
-  .item-flex {
-    flex-direction: column;
-  }
-  .item-pic {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   max-width: 1200PX;
+   flex-wrap: wrap;
+   gap: 4%;
    margin: 0 auto;
   }
-  .item-pic img {
-    width: 500px;
-    max-width: 100%;
+  .example {
+    max-width: 800px;
   }
-  .item-cap {
-    max-width: 100%;
-    padding: 0 8px;
+  .item {
+    width: 40%;
+    max-width: 300px;
   }
-}
-
-/* お客様の声 */
-.item-border {
-  width: 500px;
-  padding: 16px;
-  margin: 0 8px;
-  border-radius: 10px;
-  border: #FF965A solid 4px;
-}
-@media (max-width: 800px) {
+  .item-pic {
+    margin-top: 16px;
+  }
+  @media (max-width: 800px) {
+    .item-cap {
+      max-width: 100%;
+      padding: 0 8px;
+      height: 16px;
+      margin-bottom: 32px;
+    }
+  }
+  
+  /* お客様の声 */
   .item-border {
-    margin: 16px;
+    width: 500px;
+    padding: 16px;
+    margin: 0 8px;
+    border-radius: 10px;
+    border: #FF965A solid 4px;
+  }
+  .item-border:nth-child(2) {
+    margin-top: 16px;
+  }
+  @media (max-width: 800px) {
+    .item-border {
+      margin:0 16px;
+      width: 90%;
+    }
+  }
+  .customer-img {
     width: 90%;
+    margin: 0 auto;
+    max-width: 300px;
+    padding-top: 16px;
+  }
+  
+  .okyakusama-comment {
+    padding-top: 16px;
+    font-family:'Noto Serif JP', serif;
+  }
+  
+  /* ごあいさつ */
+  .blog {
+    width: 800px;
+    margin: 0 auto;
+  }
+  @media (max-width: 900px) {
+    .blog {
+      width: 100%;
+    }
+  }
+  /* お問い合わせ */
+  .img-otoiawase {
+    text-align: center;
+  }
+  .otoiawase {
+    width: 800px;
+  }
+  
+  /* 公式LINEの予約ボタン */
+  .btn {
+    text-align: center;
+    margin-top: 32px;
+  display: none;
+}
+.line-pc {
+  display: block;
+}
+.line-sp {
+  display: none;
+}
+@media (max-width: 900px) {
+  .btn {
+    display: block;
+  }
+  .line-pc {
+    display: none;
+  }
+  .line-sp {
+    display: block;
   }
 }
-
-.okyakusama-comment {
-  padding-top: 16px;
-}
-
-/* 選ぶ理由 */
-.h2-merit {
-  text-align: center;
-}
-.img-merit {
-  width: 600px;
-}
-
-/* お問い合わせ */
-.img-otoiawase {
-  text-align: center;
-  margin: 16px 0;
-}
-.otoiawase {
-  width: 800px;
-}
-
-/* 公式LINEの予約ボタン */
 .btn {
-  text-align: center;
-  margin: 16px 0;
+  animation: btn 1s infinite;
 }
 .line-btn {
+  color: #fff;
   background: #FF965A;
-  color: #000;
   font-size: 2em;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0,0,0,1);
   cursor:pointer;
   text-decoration: none;
   padding: 8px 32px;
+  
+}
+@keyframes btn {
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.2);
+  }
+  0%{
+    transform: scale(1);
+  }
 }
 @media (max-width: 470px) {
   .line-btn  {
@@ -360,10 +714,20 @@ ul {
 }
 
 /* 会社案内 */
-.border-bottom-color {
-  border-bottom: #FF965A solid 4px;
+
+.company {
+  text-align: start;
+  line-height: 3;
+  margin-top: 32px;
+  
+}
+.company-inner {
+  margin-bottom: 32px;
 }
 
+.map {
+  text-align: center;
+}
 /* マップの表示 */
 iframe {
   width: 600px;
@@ -390,12 +754,24 @@ iframe {
 
  /* FOOTER */
 footer {
-  background: #FFD1B8;
-  padding-top: 32px;
+  margin-top: 32px;
+  background: #ff965a;
+  padding: 80px 0 80px;
+}
+footer .img-otoiawase {
+  width: 300px;
+  margin: 0 auto;
+  margin-bottom: 80px;
+}
+@media (max-width: 900px) {
+  footer .img-otoiawase  {
+    width: 240px;
+  }
 }
 
 .footer-sign p {
   text-align: center;
-  margin-top: 32px;
+  margin-top: 12px;
   padding-bottom: 16px;
+  font-size: 12px;
 }
